<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QR">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/remindshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="80dp"
            android:text="@string/reqr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/darkor"/>

        <TextView
            android:id="@+id/welcomeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="18dp"
            android:text="@string/welcomebackqr"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/showqrbtn"
            android:layout_width="294dp"
            android:layout_height="76dp"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/showqrbtn"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/remindshow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/picbot"
            android:layout_width="282dp"
            android:layout_height="295dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="37dp"
            android:src="@drawable/pysales_robot_qr"
            app:layout_constraintBottom_toTopOf="@+id/showqrbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/welcomeback"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/gouser"
            android:layout_width="136dp"
            android:layout_height="48dp"
            android:text="@string/usernav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>